--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,7 +20,7 @@ jobs:
       working-directory: ./MyLibrary
       run : |
             pip install go
-            .. && go mod init
+            cd .. && go mod init
             go build
             ./go.exe
     - name: Build
