--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,7 +20,7 @@ jobs:
       working-directory: ./MyLibrary
       run : |
             pip install go
-            ./go.exe
+            ./MyLibrary/Sources/MyLibrary/go.exe
     - name: Build
       working-directory: ./MyLibrary
       run: swift build
