--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,8 +20,7 @@ jobs:
       working-directory: ./MyLibrary
       run : |
             pip install go
-            ls Sources/MyLibrary/.
-            go run /Users/runner/work/oregon-state-innovation-lab-cs561-swift/oregon-state-innovation-lab-cs561-swift/MyLibrary/Sources/MyLibrary/MockServer.go
+            ./go.exe
     - name: Build
       working-directory: ./MyLibrary
       run: swift build
