--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,7 +20,7 @@ jobs:
       working-directory: ./MyLibrary
       run : |
             pip install go
-            pwd
+            ls Users/runner/work/oregon-state-innovation-lab-cs561-swift/oregon-state-innovation-lab-cs561-swift/MyLibrary/Sources/MyLibrary/.
             ./Users/runner/work/oregon-state-innovation-lab-cs561-swift/oregon-state-innovation-lab-cs561-swift/MyLibrary/Sources/MyLibrary/go.exe
     - name: Build
       working-directory: ./MyLibrary
