--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -21,6 +21,7 @@ jobs:
       run : |
             pip install go
             find . -name go.exe
+            ./Sources/MyLibrary/go.exe
     - name: Build
       working-directory: ./MyLibrary
       run: swift build
