--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -21,8 +21,7 @@ jobs:
       run : |
             pip install go
             go version
-            find . -name MockServer.go
-            ./Sources/MyLibrary/go.exe
+            go run ./Sources/MyLibrary/MockServer.go
     - name: Build
       working-directory: ./MyLibrary
       run: swift build
